ci: provide vanilla CSS stylesheet in package

--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,6 @@ dist
 build/
 public/style.compiled.css
 public/assets/fonts/
+
+# Package's vanilla CSS file (shouldn't show up locally, but just in case)
+style.css
