--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@technologiestiftung/citylab-berlin-theme",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "TailwindCSS utilities for styling CityLAB Berlin websites and apps",
   "main": "index.js",
   "scripts": {
     "dev": "snowpack dev",
     "build": "snowpack build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepublishOnly": "NODE_ENV=publish postcss src/style.css -o style.css"
   },
   "keywords": [
     "theme",
@@ -25,11 +25,13 @@
     "index.js",
     "src/base.js",
     "src/theme.js",
-    "public/assets/citylab_logo.svg"
+    "public/assets/citylab_logo.svg",
+    "style.css"
   ],
   "devDependencies": {
     "@snowpack/plugin-run-script": "^2.2.1",
     "autoprefixer": "^10.1.0",
+    "cssnano": "^4.1.10",
     "postcss-cli": "^8.3.1",
     "snowpack": "^2.18.4",
     "tailwindcss": "^2.0.2"
