--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "snowpack dev",
     "build": "snowpack build",
-    "prepublishOnly": "NODE_ENV=publish postcss src/style.css -o style.css"
+    "prepublishOnly": "NODE_ENV=publish postcss src/style.css -o index.css"
   },
   "keywords": [
     "theme",
@@ -26,7 +26,7 @@
     "src/base.js",
     "src/theme.js",
     "public/assets/citylab_logo.svg",
-    "style.css"
+    "index.css"
   ],
   "devDependencies": {
     "@snowpack/plugin-run-script": "^2.2.1",
