--- a/package.json
+++ b/package.json
@@ -37,5 +37,6 @@
     "postcss-cli": "^8.3.1",
     "snowpack": "^2.18.4",
     "tailwindcss": "^2.0.2"
-  }
+  },
+  "engines" : { "node" : ">=12" }
 }
