--- a/package.json
+++ b/package.json
@@ -34,9 +34,12 @@
     "@snowpack/plugin-run-script": "2.2.1",
     "autoprefixer": "10.1.0",
     "cssnano": "4.1.10",
+    "postcss": "8.2.6",
     "postcss-cli": "8.3.1",
     "snowpack": "3.0.11",
     "tailwindcss": "2.0.2"
   },
-  "engines" : { "node" : ">=12" }
+  "engines": {
+    "node": ">=12"
+  }
 }
