--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,7 +16,7 @@ jobs:
     if: "!contains(github.event.head_commit.message, 'skip ci')"
     strategy:
       matrix:
-        node-version: [12.x, 14.x, 15.x]
+        node-version: [16.13.2]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
